fix config, prepare tests

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
         "php": "^5.5.9 || ^7.0",
         "gettext/gettext": "^3.5"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~5.7"
+    },
     "license": "MIT",
     "authors": [
         {
@@ -25,6 +28,13 @@
         "files": [
             "src/helpers.php"
         ]
+    },
+
+    "autoload-dev": {
+
+        "psr-4": {
+            "Backtheweb\\Linguo\\Tests\\": "tests"
+        }
     }
 
 
